prepare for release
svn path=/trunk/; revision=16

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+mobile-broadband-provider-info 20080822
+=======================================
+ * Dan Williams updated the United States provider information
+ * Onkar Shinde updated Indian provider information
+ * Arne Goetje updated Taiwanese provider information
+
 mobile-broadband-provider-info 20080814
 =======================================
  * first release
