--- a/ChangeLog
+++ b/ChangeLog
@@ -1,25 +1,92 @@
+2008-10-15  Antti Kaijanmäki <antti@kaijanmaki.net>
+
+	* [r33] authors.svn2cl:
+	  Added carlos
+	* [r32] README.svn:
+	  svn commit messages should not be complete ChangeLog entries
+	* [r31] serviceproviders.xml:
+	  Andreas Schildbach pointed out that o2 is spelled o2 (small
+	  letter) or (capital letter, subscript digit), but never O2
+	  (capital letter, plain digit)
+	* [r30] serviceproviders.xml:
+	  Chris Jones fixed APN of UK o2
+	* [r29] serviceproviders.xml:
+	  Stefano Rivera updated Vodacom South Africa
+	* [r28] serviceproviders.xml:
+	  Stefan Andersen removed Danish service provider Orange as it has
+	  been merged with Telia
+
 2008-10-13  Carlos Perelló Marín <carlos@gnome.org>
 
-	* serviceproviders.xml: Added Simyo and Orange to the Spanish list.
-	While adding them, sorted the entries in Spain to keep a "sane order"
-	as the wiki page asks.
+	* [r27] ChangeLog, serviceproviders.xml:
+	  2008-10-13 Carlos Perelló Marín <carlos@gnome.org>
+	  
+	  * serviceproviders.xml: Added Simyo and Orange to the Spanish
+	  list.
+	  While adding them, sorted the entries in Spain to keep a "sane
+	  order"
+	  as the wiki page asks.
 
-2008-08-21  Antti Kaijanmäki <antti@kaijanmaki.fi>
+2008-10-13  Antti Kaijanmäki <antti@kaijanmaki.net>
+
+	* [r26] serviceproviders.xml:
+	  Martijn van de Streek added Dutch service provider xs4all
+
+2008-09-23  Antti Kaijanmäki <antti@kaijanmaki.net>
+
+	* [r25] serviceproviders.xml:
+	  Pramod Dematagoda updated Sri Lankan provider information
+	* [r24] serviceproviders.xml:
+	  Fanen Ahua updated Nigerian provider information
+
+2008-09-18  Antti Kaijanmäki <antti@kaijanmaki.net>
+
+	* [r23] serviceproviders.xml:
+	  Raphael Finke provided information for Irish provider Three
+	* [r22] serviceproviders.xml:
+	  Vitja Makarov added xml:lang=ru names for Russian providers and
+	  provided information for service provider Skylink (Moscow)
+
+2008-09-15  Antti Kaijanmäki <antti@kaijanmaki.net>
+
+	* [r21] serviceproviders.xml:
+	  Carlos Santiago updated Portuguese provider information
+
+2008-09-10  Antti Kaijanmäki <antti@kaijanmaki.net>
+
+	* [r20] serviceproviders.xml:
+	  Istvan Szollosi provided information for Romanian service
+	  provider Zapp
+
+2008-08-27  Antti Kaijanmäki <antti@kaijanmaki.net>
+
+	* [r19] authors.svn2cl:
+	  correct Antti's email address
+	* [r18] serviceproviders.xml:
+	  Daniel Nylander updated Swedish provider information and provided
+	  information for Scandinavian operator ice.net
+
+2008-08-22  Antti Kaijanmäki <antti@kaijanmaki.net>
+
+	* [r16] ChangeLog, NEWS, configure.ac, generate_cl.sh:
+	  prepare for release
+
+2008-08-21  Antti Kaijanmäki <antti@kaijanmaki.net>
 
 	* [r15] serviceproviders.xml:
 	  Arne Goetje updated Taiwanese provider information
 
-2008-08-20  Antti Kaijanmäki <antti@kaijanmaki.fi>
+2008-08-20  Antti Kaijanmäki <antti@kaijanmaki.net>
 
 	* [r14] serviceproviders.xml:
 	  Onkar Shinde updated Indian provider information
 
-2008-08-18  Antti Kaijanmäki <antti@kaijanmaki.fi>
+2008-08-18  Antti Kaijanmäki <antti@kaijanmaki.net>
 
 	* [r13] serviceproviders.xml:
 	  Dan Williams updated the United States provider information
 
-2008-08-14  Antti Kaijanmäki <antti@kaijanmaki.fi>
+2008-08-14  Antti Kaijanmäki <antti@kaijanmaki.net>
 
 	* [r11] ChangeLog:
 	  update ChangeLog
@@ -31,25 +98,25 @@
 	  * added script to generate ChangeLog
 	  * added NEWS
 
-2008-07-29  Antti Kaijanmäki <antti@kaijanmaki.fi>
+2008-07-29  Antti Kaijanmäki <antti@kaijanmaki.net>
 
 	* [r7] configure.ac, serviceproviders.xml:
 	  Christoffer Sawicki updated Swedish provider information
 
-2008-07-25  Antti Kaijanmäki <antti@kaijanmaki.fi>
+2008-07-25  Antti Kaijanmäki <antti@kaijanmaki.net>
 
 	* [r6] mobile-broadband-provider-info.pc.in:
 	  added .pc
 	* [r5] Makefile.am, README, README.svn, configure.ac:
 	  added .pc
 
-2008-07-22  Antti Kaijanmäki <antti@kaijanmaki.fi>
+2008-07-22  Antti Kaijanmäki <antti@kaijanmaki.net>
 
 	* [r4] Makefile.am, README.svn, configure.ac:
 	  Use the GNU Build Tools for configuration and installation (and
 	  place them in trunk this time ;)
 
-2008-07-21  Antti Kaijanmäki <antti@kaijanmaki.fi>
+2008-07-21  Antti Kaijanmäki <antti@kaijanmaki.net>
 
 	* [r2] COPYING, ChangeLog, MAINTAINERS, README, README.svn,
 	  serviceproviders.dtd, serviceproviders.xml:
