--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,25 @@
+20250613
+--------
+* Add support for Cell Broadcast channel information to schema
+* Add channel information for NL, DE, US
+* New providers
+  - de: sipgate
+  - dk: Telia IOT
+  - pt: Digi PT, LigaT
+  - pt: Meo, NOS
+  - uk: 1pMobile
+  - us: AT&T FirstNet
+* Updated providers:
+  - at: spusu
+  - de: Bild Mobil, congstar
+  - fr: bouygues
+  - it: Iliad
+  - pt: Vodafone, NOS, Lycamobile, Meo
+  - ru: Win Mobile
+  - us: T-mobile
+* Removed providers:
+  - pt: ZON, TMN, CLIX, Optimus, Kanguru
+
 20240407
 --------
 * Switch to meson
